# OpenRCT2-VehicleGenerator

./: .gitignore  .yamllint.yaml  README.md  pyproject.toml  readme.md
.github/workflows/: build-check.yml  build-plugin.yml  cpp-tests.yml  lint.yml  pytest.yml  wheels.yml
blender_addon/: __init__.py  blender_manifest.toml  operators.py  panels.py  props.py  scene_to_ride.py  track_types.json
doc/: blender-plugin-installation.md  blender-plugin-reference.md  blender-plugin-tutorial.md
examples/scenery_large/: gate.yaml  materials.mtl
examples/scenery_small/: materials.mtl  obelisk.yaml  spinner.yaml
examples/scenery_wall/: double_wall.yaml  glass_wall.yaml  materials.mtl  wall.yaml
examples/single_rail/: materials.mtl  single_rail.json
examples/wooden/: classic_wooden.json  classic_wooden.yaml  materials.mtl  scene.blend  scene.blend1
native/: .clang-format  CMakeLists.txt  bindings.cpp
native/src/: Image.hpp  Mesh.cpp  Mesh.hpp  Palette.cpp  Palette.hpp  RayTrace.cpp  RayTrace.hpp  Renderer.cpp  Renderer.hpp
openrct2_iso_core/: __init__.py  cli.py  config.py  constants.py  geometry.py  images_dat.py  lights.py  mesh.py  palette.py  ray_trace.py  types.py
openrct2_scenery_generator/: __init__.py  __main__.py  constants.py  exporter.py  loader.py  sprite_renderer.py  types.py
openrct2_vehicle_generator/: README.md  __init__.py  __main__.py  constants.py  exporter.py  image.py  loader.py  mesh.py  palette.py  ray_trace.py  sprite_renderer.py  types.py
scenery_addon/: __init__.py  blender_manifest.toml  operators.py  panels.py  props.py  scene_to_scenery.py
scripts/: _buildlib.py  build_plugin_local.py  build_track_types.py  build_wooden_car.py  build_wooden_restraint.py  collect_wheels.py  merge_parkobj.py  ride_gen.py  split_atlas.py
scripts/ci/: install_embree_linux.sh  set_version.py
tests/: test_config.py  test_constants.py  test_exporter.py  test_geometry.py  test_image.py  test_images_dat.py  test_lights.py  test_loader.py  test_main.py  test_mesh.py  test_palette.py  test_scenery.py  test_scenery_loader.py  test_sprite_counts.py  test_sprite_renderer.py  test_wall_geometry.py
vehicle_renderer_addon/: README.md  __init__.py  blender_manifest.toml  operators.py  panels.py  progress_overlay.py  props.py  scene_to_ride.py
x123_renderer/: README.md
x123_renderer/src/: Mesh.cpp  RayTrace.cpp  RayTrace.hpp
x7_renderer/: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  bindings.cpp
x7_renderer/src/: Color.hpp  Image.hpp  Mesh.cpp  Mesh.hpp  Palette.cpp  RayTrace.cpp  RayTrace.hpp  Renderer.cpp  Renderer.hpp  VectorMath.hpp
x7_renderer/tests/: CMakeLists.txt  test_mesh.cpp  test_palette.cpp  test_vector_math.cpp
