[project]
name = "OpenRCT2-VehicleGenerator"
version = "0.1.1"
description = "Author and export OpenRCT2 ride vehicles from meshes (renders via openrct2-x7-renderer)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openrct2-x7-renderer>=0.1.0",
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.scripts]
openrct2-vehicle-generator = "openrct2_vehicle_generator.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "ruff>=0.5",
    "yamllint>=1.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["openrct2_vehicle_generator"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["openrct2_vehicle_generator", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
files = ["openrct2_vehicle_generator"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

# openrct2-x7-renderer ships no py.typed marker, so mypy can't resolve its types.
[[tool.mypy.overrides]]
module = ["openrct2_x7_renderer.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openrct2_vehicle_generator"]
