[project]
name = "OpenRCT2-VehicleGenerator"
version = "0.1.1"
description = "Author and export OpenRCT2 ride vehicles from meshes (renders via openrct2-x7-renderer)."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "Alex Parisi", email = "alex@atparisi.com" }
]
dependencies = [
    "OpenRCT2-ObjectCommon>=0.2.1",
    "openrct2-x7-renderer>=0.3.6",
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/alex-parisi/OpenRCT2-VehicleGenerator"
Repository = "https://github.com/alex-parisi/OpenRCT2-VehicleGenerator"

[project.scripts]
openrct2-vehicle-generator = "openrct2_vehicle_generator.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "ruff>=0.5",
    "yamllint>=1.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=openrct2_vehicle_generator"

[tool.coverage.run]
source = ["openrct2_vehicle_generator"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["openrct2_vehicle_generator", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N"]

[tool.ruff.lint.per-file-ignores]
# Blender mandates operator/UIList/panel class names like `VG_OT_name`,
# `VG_UL_name`, `VG_PT_name` (and matching bpy var names), which trip
# pep8-naming. They can't be renamed without breaking add-on registration.
"vehicle_renderer_addon/*" = ["N801", "N802", "N806"]

[tool.mypy]
python_version = "3.11"
files = ["openrct2_vehicle_generator"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openrct2_vehicle_generator"]
